# gitlab-to-gh-actions

./: .coverage  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
api/: convert.py
docs/: CONCEPTS.md  MIGRATION_GUIDE.md
examples/: complex.gitlab-ci.yml
mcp_server/: README.md  __init__.py  __main__.py  embeddings.py  indexer.py  pyproject.toml  seed_data.py  server.py  test_smoke.py
mcp_server/data/conversions/cache_policies/: ci.yml  gitlab-ci.yml  metadata.json
mcp_server/data/conversions/docker_registry/: docker.yml  gitlab-ci.yml  metadata.json
mcp_server/data/conversions/environments_advanced/: gitlab-ci.yml  metadata.json  review.yml
mcp_server/data/conversions/include_templates/: ci.yml  gitlab-ci.yml  metadata.json
mcp_server/data/conversions/node_simple/: ci.yml  gitlab-ci.yml  metadata.json
mcp_server/data/conversions/pages/: gitlab-ci.yml  metadata.json  pages.yml
mcp_server/data/conversions/parallel_matrix/: gitlab-ci.yml  metadata.json  test.yml
mcp_server/data/conversions/python_complex/: ci.yml  gitlab-ci.yml  metadata.json
mcp_server/data/conversions/rules_changes/: gitlab-ci.yml  lint.yml  metadata.json
mcp_server/data/conversions/trigger_pipeline/: ci.yml  gitlab-ci.yml  metadata.json
mcp_server/data/gitlab_ci/: auto_devops_override.yml  go_microservice.yml  monorepo_include.yml
mcp_server/data/vectordb/: chroma.sqlite3
mcp_server/tools/: handlers.py
src/gl2gh/: __init__.py  cli.py  converter.py  knowledge_base.yml  models.py  parser.py
src/gl2gh/agents/: __init__.py  migration_agent.py  optimizer_agent.py  validator_agent.py
src/gl2gh/mappings/: __init__.py  rules.py
src/gl2gh/utils/: __init__.py  async_utils.py  convert_handler.py  yaml_utils.py
tests/: __init__.py  conftest.py  test_agents.py  test_agents_extended.py  test_app.py  test_async_utils.py  test_cli.py  test_cli_extended.py  test_convert_handler.py  test_converter.py  test_converter_extended.py  test_mappings.py  test_mappings_extended.py  test_mcp_server.py  test_parser.py  test_parser_extended.py  test_yaml_utils.py
tests/fixtures/gitlab/: complex.yml  (+2 more)
web/: index.html
website/: app.py  blog.html  converter.html  docs.html  index.html  roadmap.html
