[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gl2gh"
version = "1.0.0"
description = "Production-grade GitLab CI/CD to GitHub Actions migration tool powered by GitHub Copilot"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "gl2gh contributors" }]
keywords = ["gitlab", "github", "ci", "cd", "migration", "github-actions", "devops"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "github-copilot-sdk>=0.1.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
gl2gh = "gl2gh.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gl2gh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
